# allergo-probe-dentist

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: deploy.yml
allergo/: adaptive.py  config.py  create_order.py  dentist_cabinet.py  desktop.py  main.py  mobile.py  patient_data.py  prescription.py  qr.py
