[project]
name = "allergo-probe-dentist"
version = "25.0.0"
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
  "flet==0.28.3"
]

[tool.flet]
org = "kz.allergoproba"
product = "allergo-probe-dentist"
company = "allergoproba"
copyright = ""
app.module = "main"
app.path = "allergo"

[tool.ty.environment]
extra-paths = ["allergo"]

[dependency-groups]
dev = [
    "flet[all]==0.28.3",
]
