[project]
name = "allergo-proba-dentist"
version = "25.0.0"
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
  "flet==0.28.3",
  "qrcode[pil]>=7.4.2",
]

[tool.flet]
org = "kz.allergoproba"
product = "allergo-proba-dentist"
company = "allergoproba"
copyright = ""
app.module = "main"
app.path = "allergo"

[tool.ty.environment]
extra-paths = ["allergo"]

[dependency-groups]
dev = [
    "flet[all]==0.28.3",
]
